--- a/index.html
+++ b/index.html
@@ -4,12 +4,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <link href="https://fonts.googleapis.com/css?family=Noto+Serif:400,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./style.css">
+
   <title>Techno</title>
 </head>
 <body>
   <div id="app">
-    {{ message }}
+    <section class="products">
+      <div v-for="product in products" :key="product.id" class="product">
+        <img :src="product.img" alt="product.nome" class="product_img" />
+        <div class="product_info">
+          <span class="product_price">{{product.preco}}</span>
+          <h2 class="product_title">{{product.nome}}</h2>
+        </div>
+      </div>
+    </section>
   </div>
 
   <script src="./vue.min.js"></script>
