--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div v-for="product in products" :key="product.id" class="product">
         <img :src="product.img" alt="product.nome" class="product_img" />
         <div class="product_info">
-          <span class="product_price">{{product.preco}}</span>
+          <span class="product_price">{{product.preco | priceTreatment}}</span>
           <h2 class="product_title">{{product.nome}}</h2>
         </div>
       </div>
