--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </li>
           </ul>
           <p class="cart_total">{{cartTotal | priceTreatment}}</p>
-          <button class="cart_checkout">Finalizar compra</button>
+          <button class="cart_checkout" @click="alert('Em construção!') ">Finalizar compra</button>
         </div>
         <p v-else>O carrinho está vazio.</p>
       </div>
